including apidoc.js

--- a/ntask-api/package.json
+++ b/ntask-api/package.json
@@ -4,7 +4,8 @@
   "description": "Task list API",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node index.js",
+    "start": "npm run apidoc && babel-node index.js",
+    "apidoc": "apidoc -i routes/ -o public/apidoc",
     "test": "NODE_ENV=test mocha test/**/*.js"
   },
   "author": "Caio Ribeiro Pereira",
@@ -22,6 +23,7 @@
     "sqlite3": "^3.1.1"
   },
   "devDependencies": {
+    "apidoc": "^0.15.1",
     "babel-register": "^6.5.2",
     "chai": "^3.5.0",
     "mocha": "^2.4.5",
