--- a/ntask-api/package.json
+++ b/ntask-api/package.json
@@ -21,12 +21,15 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.15.0",
     "consign": "^0.1.2",
+    "cors": "^2.7.1",
     "express": "^4.13.4",
     "jwt-simple": "^0.4.1",
+    "morgan": "^1.6.1",
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
     "sequelize": "^3.19.2",
-    "sqlite3": "^3.1.1"
+    "sqlite3": "^3.1.1",
+    "winston": "^2.1.1"
   },
   "devDependencies": {
     "apidoc": "^0.15.1",
