implementing chapter 12 (incomplete)

--- a/ntask-web/package.json
+++ b/ntask-web/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "start": "npm run build && npm run server",
     "server": "http-server public -p 3001",
-    "build": "npm run browserify && npm run uglify",
-    "browserify": "browserify src -t babelify -o public/js/app.js",
-    "uglify": "uglify -s public/js/app.js -o public/js/app.min.js"
+    "build": "browserify src -t babelify -o public/js/app.js"
   },
   "author": "Caio Ribeiro Pereira",
   "dependencies": {
@@ -15,7 +13,6 @@
     "browser-request": "^0.3.3",
     "browserify": "^13.0.0",
     "http-server": "^0.9.0",
-    "tiny-emitter": "^1.0.2",
-    "uglify": "^0.1.5"
+    "tiny-emitter": "^1.0.2"
   }
 }
